--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "prisma": "^2.28.0",
     "sqlite3": "^5.0.2"
   },
   "devDependencies": {
