--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "2.28.0",
     "express": "^4.17.1",
-    "prisma": "^2.28.0",
+    "prisma": "2.28.0",
     "sqlite3": "^5.0.2"
   },
   "devDependencies": {
